--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section id="home" class="home-section">
                 <h2>Home</h2>
                 <div class="bio">
-                    <img src="C:\Users\alexi\OneDrive\Εικόνες\Άλμπουμ κάμερας\WIN_20231114_12_14_44_Pro.jpg" alt="A picture of me" class="profile-picture">
+                    <img src="C:\Users\alexi\OneDrive\Έγγραφα\WIN_20231114_12_14_44_Pro.jpg" alt="A picture of me" class="profile-picture">
                     <p>Hello, my name is Alexia Toli. I am a computer science student and I enjoy working with technology and learning new things.</p>
                 </div>
             </section>
